# e-commerce-rs

./: .env  .env.example  .gitignore  Cargo.toml  README.md
common/: Cargo.toml  build.rs
common/src/: lib.rs  logging.rs  ratelimit.rs
migrations/: 20251223020156_init.sql
order/: Cargo.toml
order/src/: client.rs  main.rs  order.rs
product/: Cargo.toml
product/src/: client.rs  main.rs  product.rs
proto/: Cargo.toml  order.proto  order.rs  product.proto  product.rs  user.proto  user.rs
proto/src/: lib.rs  order.rs  product.rs  user.rs
specs/: instructions.md
user/: Cargo.toml
user/src/: client.rs  main.rs  tt.rs  user.rs
