[workspace]
resolver = "2"

members = ["user", "order", "product", "common", "proto"]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tonic-build = "0.12"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "migrate",
    "rust_decimal"
] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
pin-project = "1.0"
http = "1.4.0"
dashmap = "5.5"