[package]
name = "product"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "product-server"
path = "src/main.rs"

[[bin]]
name = "product-client"
path = "src/client.rs"

[dependencies]
proto = { path = "../proto" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
