[package]
name = "user"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "user-server"
path = "src/main.rs"

[[bin]]
name = "user-client"
path = "src/client.rs"

[[bin]]
name = "test-service"
path = "src/tt.rs"

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }